--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "buildCommand": "echo 'No build needed'",
   "rewrites": [
     { "source": "/", "destination": "/api/card" }
   ],
@@ -7,5 +8,6 @@
       "memory": 1024,
       "maxDuration": 10
     }
-  }
+  },
+  "outputDirectory": "."
 }
