--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "functions": {
     "api/card.ts": {
-      "maxDuration": 10
+      "maxDuration": 10,
+      "includeFiles": "src/**"
     }
   }
 }
