Create self-contained serverless function for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "functions": {
     "api/card.ts": {
       "maxDuration": 10,
-      "includeFiles": "src/**"
+      "includeFiles": "src/template.svg"
     }
   }
 }
