--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 GITHUB_TOKEN=your_github_token_here
 GITHUB_USERNAME=your_github_username
+GITHUB_FALLBACK_TOKEN=optional_token_for_other_users
 PORT=3000
